; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_cgl_ctx.c_gfx_ctx_cgl_get_proc_address.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_cgl_ctx.c_gfx_ctx_cgl_get_proc_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kCFAllocatorDefault = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [44 x i8] c"/System/Library/Frameworks/OpenGL.framework\00", align 1
@kCFURLPOSIXPathStyle = common dso_local global i32 0, align 4
@kCFStringEncodingASCII = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @gfx_ctx_cgl_get_proc_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gfx_ctx_cgl_get_proc_address(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %7 = load i32, i32* @kCFAllocatorDefault, align 4
  %8 = call i32 @CFSTR(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* @kCFURLPOSIXPathStyle, align 4
  %10 = call i32 @CFURLCreateWithFileSystemPath(i32 %7, i32 %8, i32 %9, i32 1)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @kCFAllocatorDefault, align 4
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @CFBundleCreate(i32 %11, i32 %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* @kCFAllocatorDefault, align 4
  %15 = load i8*, i8** %2, align 8
  %16 = load i32, i32* @kCFStringEncodingASCII, align 4
  %17 = call i32 @CFStringCreateWithCString(i32 %14, i8* %15, i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @CFBundleGetFunctionPointerForName(i32 %18, i32 %19)
  store i32 %20, i32* %6, align 4
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @CFRelease(i32 %21)
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @CFRelease(i32 %23)
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @CFRelease(i32 %25)
  %27 = load i32, i32* %6, align 4
  ret i32 %27
}

declare dso_local i32 @CFURLCreateWithFileSystemPath(i32, i32, i32, i32) #1

declare dso_local i32 @CFSTR(i8*) #1

declare dso_local i32 @CFBundleCreate(i32, i32) #1

declare dso_local i32 @CFStringCreateWithCString(i32, i8*, i32) #1

declare dso_local i32 @CFBundleGetFunctionPointerForName(i32, i32) #1

declare dso_local i32 @CFRelease(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
